Check application secret indices provided by requester are within range before populating paralemon template